--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "keywords": ["typescript", "react", "starter"],
   "main": "src/index.tsx",
   "dependencies": {
+    "@testing-library/react": "12.1.2",
+    "jest": "27.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-test-renderer": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
@@ -17,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest --watchAll --verbose",
     "eject": "react-scripts eject"
   },
   "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
